--- a/Resource/template/admin/edit.twig
+++ b/Resource/template/admin/edit.twig
@@ -71,7 +71,7 @@
                                 <div class="row mb-2">
                                     <div class="col-3">
                                         <span>{{ '投稿者'|trans }}</span>
-                                        <span class="badge badge-primary ml-1">{{ 'product_review.common.required'|trans }}</span>
+                                        <span class="badge bg-primary ms-1">{{ 'admin.common.required'|trans }}</span>
                                     </div>
                                     <div class="col">
                                         {{ form_widget(form.reviewer_name) }}
@@ -100,7 +100,7 @@
                                 <div class="row mb-2">
                                     <div class="col-3">
                                         <span>{{ 'おすすめレベル'|trans }}</span>
-                                        <span class="badge badge-primary ml-1">{{ 'product_review.common.required'|trans }}</span>
+                                        <span class="badge bg-primary ms-1">{{ 'admin.common.required'|trans }}</span>
                                     </div>
                                     <div class="col">
                                         {{ form_widget(form.recommend_level) }}
@@ -111,7 +111,7 @@
                                 <div class="row mb-2">
                                     <div class="col-3">
                                         <span>{{ 'タイトル'|trans }}</span>
-                                        <span class="badge badge-primary ml-1">{{ 'product_review.common.required'|trans }}</span>
+                                        <span class="badge bg-primary ms-1">{{ 'admin.common.required'|trans }}</span>
                                     </div>
                                     <div class="col">
                                         {{ form_widget(form.title) }}
@@ -122,7 +122,7 @@
                                 <div class="row mb-2">
                                     <div class="col-3">
                                         <span>{{ 'コメント'|trans }}</span>
-                                        <span class="badge badge-primary ml-1">{{ 'product_review.common.required'|trans }}</span>
+                                        <span class="badge bg-primary ms-1">{{ 'admin.common.required'|trans }}</span>
                                     </div>
                                     <div class="col">
                                         {{ form_widget(form.comment, {'attr': {'rows': '6'}}) }}
