@see https://github.com/EC-CUBE/ec-cube/issues/5727

--- a/Resource/template/admin/index.twig
+++ b/Resource/template/admin/index.twig
@@ -136,7 +136,7 @@
                 </div>
                 <div class="d-block text-center">
                     <button class="btn btn-ec-regular search-clear"
-                            type="button">{{ 'product_review.admin.product_review.search_clear'|trans }}</button>
+                            type="reset">{{ 'product_review.admin.product_review.search_clear'|trans }}</button>
                 </div>
             </div><!-- /.col -->
             <div class="c-outsideBlock__contents mb-5">
