--- a/Resource/template/admin/config.twig
+++ b/Resource/template/admin/config.twig
@@ -37,7 +37,7 @@
                                         <span class="card-title">{{ 'product_review.admin.config.config_title'|trans }}</span>
                                     </div>
                                 </div>
-                                <div class="col-4 text-right">
+                                <div class="col-4 text-end">
                                     <a data-bs-toggle="collapse" href="#basicConfig" aria-expanded="false"
                                        aria-controls="basicConfig">
                                         <i class="fa fa-angle-up fa-lg"></i>
