--- a/Resource/template/admin/edit.twig
+++ b/Resource/template/admin/edit.twig
@@ -40,7 +40,7 @@
                                     </span>
                                     </div>
                                 </div>
-                                <div class="col-4 text-right">
+                                <div class="col-4 text-end">
                                     <a data-bs-toggle="collapse" href="#basicConfig" aria-expanded="false"
                                        aria-controls="basicConfig">
                                     </a>
